# WebApiPerfromance

./: .gitignore  AGENTS.md  HelloWorldTestResults.md  OrdersTestResults.md  README.md  USAGE.md  WebApiPerfromance.sln  conftest.py  docker-compose.yml  fix_config_ports.py  pyproject.toml  run_manual.sh
CppDrogon/: .dockerignore  Dockerfile  main.cpp
DjangoApi/: .env  requirements.txt
DjangoApi/djangoapi/: settings.py  urls.py  views.py  wsgi.py
DotNetApi/: Dockerfile  Program.cs  appsettings.json
DotNetApiAot/: Dockerfile  DotNetApiAot.csproj  Program.cs  appsettings.json
ElixirPhoenix/: .dockerignore  Dockerfile
ElixirPhoenix/lib/: elixir_phoenix_api.ex
ErlangCowboy/: .dockerignore  README.md  rebar.config
ErlangCowboy/src/: db_worker.erl  erlang_cowboy_api_app.erl  erlang_cowboy_api_sup.erl  hello_handler.erl  orders_handler.erl
GoFiber/: Dockerfile  go.mod
HaskellServant/: Dockerfile  package.yaml
HaskellServant/src/: Main.hs
JavaSpringBoot/: .dockerignore  Dockerfile  pom.xml
NodeBunApi/: package.json
NodeBunApi/src/: index.ts
NodeDenoApi/: Dockerfile  main.ts
NodeExpressApi/: .dockerignore  package.json
NodeFastifyApi/: package-lock.json  package.json
NodeFastifyApi/src/: index.js
PythonFastApi/: Dockerfile  main.py  requirements.txt
PythonLightStar/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
RubyRails/: .dockerignore  .env  Dockerfile  Gemfile
RubyRails/config/: application.rb  database.yml  puma.rb  routes.rb
RustActix/: .dockerignore  Cargo.toml
RustActix/src/: main.rs
SwiftVapor/: .dockerignore  Dockerfile  Package.swift
apps/: shared_api.proto
apps/AdaApi/: Dockerfile
apps/BunUwsApi/: package.json
apps/BunUwsClusterApi/: Dockerfile  package.json
apps/CApi/: CMakeLists.txt  Dockerfile  main.c
apps/CLibuv/: CMakeLists.txt  Dockerfile  main.c
apps/CMicrohttpd/: CMakeLists.txt  Dockerfile  main.c
apps/CobolApi/: Dockerfile
apps/CppDrogon/: CMakeLists.txt  Dockerfile  main.cpp
apps/CrystalKemal/: Dockerfile  shard.yml
apps/CrystalLucky/: Dockerfile  shard.yml
apps/DartShelf/: Dockerfile  pubspec.yaml
apps/DjangoApi/: .dockerignore  Dockerfile  requirements.txt
apps/DotNetApi/: ApiGrpcService.cs  Dockerfile  DotNetApi.csproj  Program.cs  appsettings.json
apps/DotNetApiAot/: DotNetApiAot.csproj  Program.cs
apps/DotNetCarter/: Dockerfile  DotNetCarter.csproj  Modules.cs  Program.cs
apps/DotNetCarterAot/: Dockerfile  DotNetCarterAot.csproj  Program.cs  appsettings.json
apps/DotNetCarterAotDapper/: Dockerfile  Program.cs
apps/DotNetCarterAotEfCore/: Dockerfile  Program.cs  appsettings.json
apps/DotNetCarterDapper/: Dockerfile  DotNetCarterDapper.csproj  Modules.cs  Program.cs
apps/DotNetCarterEfCore/: Dockerfile  DotNetCarterEfCore.csproj  Modules.cs  Order.cs  OrdersDbContext.cs  Program.cs  appsettings.json
apps/DotNetDapper/: Dockerfile  DotNetDapper.csproj  Program.cs
apps/DotNetEfCore/: Dockerfile  Program.cs
apps/DotNetEfCoreAot/: Dockerfile  DotNetEfCoreAot.csproj  Program.cs  Program.cs.orig
apps/ElixirPhoenix/: mix.exs
apps/ElixirPlug/: Dockerfile  mix.exs
apps/ErlangCowboy/: Dockerfile  README.md  rebar.config
apps/FSharpAotDapper/: Dockerfile  FSharpAotDapper.fsproj  Program.fs  appsettings.json  rd.xml
apps/FSharpApi/: Dockerfile  FSharpApi.fsproj  Program.fs
apps/FSharpApiAot/: Dockerfile  FSharpApiAot.fsproj  Program.fs  rd.xml
apps/FSharpDapper/: Dockerfile  FSharpDapper.fsproj  Program.fs  appsettings.json
apps/FSharpEfCore/: Dockerfile  FSharpEfCore.fsproj  Program.fs
apps/FortranApi/: Dockerfile
apps/GleamApi/: .dockerignore  Dockerfile  gleam.toml
apps/GoChi/: Dockerfile  go.mod  go.sum  main.go
apps/GoEcho/: Dockerfile  go.mod  go.sum  main.go
apps/GoFiber/: Dockerfile  go.mod  go.sum  main.go
apps/GoGin/: Dockerfile  go.mod  go.sum  main.go
apps/GoNetHttp/: Dockerfile  go.mod  go.sum  main.go
apps/HaskellServant/: .dockerignore  package.yaml
apps/JavaMicronaut/: Dockerfile  pom.xml
apps/JavaQuarkus/: Dockerfile  pom.xml
apps/JavaSpringBoot/: .env  Dockerfile  pom.xml
apps/JavaSpringWebFlux/: .dockerignore  .env  Dockerfile  pom.xml
apps/KotlinKtor/: Dockerfile  build.gradle.kts
apps/LuaOpenResty/: Dockerfile  app.lua  nginx.conf
apps/NimHttpbeast/: Dockerfile  httpbeast_api.nimble  main.nim
apps/NodeAdonisApi/: .env  Dockerfile  adonisrc.ts  package.json  tsconfig.json
apps/NodeAdonisClusterApi/: .dockerignore  Dockerfile  package.json
apps/NodeBunAdonisApi/: Dockerfile  package.json
apps/NodeBunAdonisClusterApi/: Dockerfile  package.json
apps/NodeBunApi/: .dockerignore  Dockerfile  package.json  tsconfig.json
apps/NodeBunClusterApi/: Dockerfile  package.json
apps/NodeBunElysiaApi/: package.json
apps/NodeBunElysiaClusterApi/: .env  package.json  tsconfig.json
apps/NodeBunExpressApi/: Dockerfile  package.json
apps/NodeBunExpressClusterApi/: package.json
apps/NodeBunFastifyApi/: package.json
apps/NodeBunFastifyClusterApi/: package.json
apps/NodeKoaApi/: .env  (+1 more)
apps/PythonLightStar/: Dockerfile  main.py  pyproject.toml
apps/RustActix/: Cargo.toml  Dockerfile
apps/RustActix/proto/: api.proto
apps/RustActix/src/: main.rs
apps/RustAxum/: Cargo.toml  Dockerfile
apps/RustAxum/src/: main.rs
apps/RustRocket/: Cargo.toml  Dockerfile
apps/RustRocket/src/: main.rs
bench/: .host-net.override.yml  .host-net.override.yml.tmp  Cargo.toml  run_all.sh  run_all_combined.sh  run_all_orders.sh  run_helloworld_quick.sh  run_orders_fast.sh  run_orders_quick.sh  run_orders_working.sh  run_quick.sh
bench/src/: main.rs
benchmarks/: __init__.py  __main__.py  config.py  conftest.py  formatter.py  parser.py  runner.py  test_benchmarks.py
database/: mongo-seed.js  seed.sql
proto_py/: api_pb2_grpc.py
results/: Summary.HelloWorld.md  Summary.MongoDBOrders.md  Summary.Orders.md  Summary.PostgreSQLOrders.md  Summary.SSEHello.md  Summary.SSEOrders.md  Summary.Unified.md  Summary.UnifiedOrders.md  Summary.WSEcho.md  Summary.WSOrders.md  Summary.gRPCHello.md  Summary.gRPCOrders.md
(+636 files in other folders)
