[package]
name = "webapi-bench"
version = "0.1.0"
edition = "2021"
description = "Unified REST + gRPC benchmarking tool (reqwest HTTP/2 + tonic)"

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
hdrhistogram = "7"
anyhow = "1"

[build-dependencies]
tonic-build = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
