[package]
name = "rust-actix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
tokio = { version = "1.41", features = ["full"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
mongodb = { version = "3", features = ["tokio-runtime"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
