[package]
name = "rust-rocket-api"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
tonic = "0.12"
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
deadpool-postgres = "0.14"
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[build-dependencies]
tonic-build = "0.12"
